docs: 📚 update README.md

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "sveltekit-blog-mdx",
-  "version": "2.0.0",
+  "name": "sveltekit-accessibility-testing",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "svelte-kit dev --port 3030",
+    "dev": "svelte-kit dev --port 3000",
     "build": "npm run generate:manifest && svelte-kit build",
-    "preview": "svelte-kit preview --port 3030",
+    "preview": "svelte-kit preview --port 3000",
     "check": "svelte-check --fail-on-hints",
     "check:watch": "svelte-check --watch",
     "lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
@@ -15,7 +15,7 @@
     "generate:sitemap": "node ./generate-sitemap.js",
     "prettier:check": "prettier --check --plugin-search-dir=. .",
     "prepare": "husky install",
-    "test:a11y": "pa11y-ci --sitemap 'http://localhost:3030/sitemap.xml' --sitemap-find 'https://example.com' --sitemap-replace 'http://localhost:3030'",
+    "test:a11y": "pa11y-ci --sitemap 'http://localhost:3000/sitemap.xml' --sitemap-find 'https://example.com' --sitemap-replace 'http://localhost:3030'",
     "test": "playwright test"
   },
   "devDependencies": {
