--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@sveltejs/adapter-static": "^1.0.0-next.29",
     "@sveltejs/kit": "^1.0.0-next.301",
     "@types/object-hash": "^2.2.1",
+    "commitlint": "^16.2.4",
     "dayjs": "^1.11.0",
     "dotenv": "^16.0.0",
     "eslint": "^8.11.0",
