--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fontsource/lato": "^4.5.3",
     "@fontsource/lora": "^4.5.4",
     "@fontsource/source-sans-pro": "^4.5.4",
+    "@iconify/svelte": "^2.2.1",
     "@playwright/test": "^1.20.0",
     "@rodneylab/sveltekit-components": "^0.2.11",
     "@sveltejs/adapter-static": "^1.0.0-next.29",
@@ -53,7 +54,6 @@
     "stylelint-scss": "^4.2.0",
     "svelte": "^3.46.4",
     "svelte-check": "^2.4.6",
-    "svelte-feather-icons": "^3.5.1",
     "svelte-preprocess": "^4.10.4",
     "svelte-preprocess-import-assets": "^0.1.6",
     "vanilla-lazyload": "^17.6.1",
