--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "license": "BSD-3-Clause",
   "description": "SvelteKit Accessibility Testing: see how you can use Playwright to run automated axe accessibility & htmlcs tests in your Svelte CI workflow.",
   "scripts": {
-    "dev": "svelte-kit dev --port 3000",
+    "dev": "svelte-kit dev --port 3030",
     "build": "npm run generate:manifest && svelte-kit build",
-    "preview": "svelte-kit preview --port 3000",
+    "preview": "svelte-kit preview --port 3030",
     "check": "svelte-check --fail-on-hints",
     "check:watch": "svelte-check --watch",
     "lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
@@ -21,45 +21,45 @@
     "test": "playwright test"
   },
   "devDependencies": {
-    "@commitlint/config-conventional": "^16.2.1",
-    "@fontsource/lato": "^4.5.3",
-    "@fontsource/lora": "^4.5.4",
-    "@fontsource/source-sans-pro": "^4.5.4",
+    "@commitlint/config-conventional": "^17.0.3",
+    "@fontsource/lato": "^4.5.8",
+    "@fontsource/lora": "^4.5.10",
+    "@fontsource/source-sans-pro": "^4.5.10",
     "@iconify/svelte": "^2.2.1",
-    "@playwright/test": "^1.20.0",
-    "@rodneylab/sveltekit-components": "^0.2.11",
-    "@sveltejs/adapter-static": "^1.0.0-next.29",
-    "@sveltejs/kit": "^1.0.0-next.301",
+    "@playwright/test": "^1.22.2",
+    "@rodneylab/sveltekit-components": "^0.2.13",
+    "@sveltejs/adapter-static": "^1.0.0-next.34",
+    "@sveltejs/kit": "^1.0.0-next.354",
     "@types/object-hash": "^2.2.1",
-    "commitlint": "^16.2.4",
-    "dayjs": "^1.11.0",
-    "dotenv": "^16.0.0",
-    "eslint": "^8.11.0",
+    "commitlint": "^17.0.3",
+    "dayjs": "^1.11.3",
+    "dotenv": "^16.0.1",
+    "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-svelte3": "^3.4.1",
+    "eslint-plugin-svelte3": "link:latest@commitlint/config-conventional@latest",
     "front-matter": "^4.0.2",
-    "husky": "^7.0.4",
-    "mdsvex": "^0.10.5",
+    "husky": "^8.0.1",
+    "mdsvex": "^0.10.6",
     "object-hash": "^3.0.0",
-    "pa11y": "^6.1.1",
+    "pa11y": "^6.2.3",
     "pa11y-ci": "^3.0.1",
-    "postcss": "^8.4.12",
-    "postcss-html": "^1.3.0",
-    "prettier": "~2.5.1",
-    "prettier-plugin-svelte": "^2.6.0",
+    "postcss": "^8.4.14",
+    "postcss-html": "^1.4.1",
+    "prettier": "~2.7.1",
+    "prettier-plugin-svelte": "^2.7.0",
     "reading-time": "1.4.0",
-    "sass": "^1.49.9",
-    "sharp": "^0.29.3",
-    "stylelint": "^14.6.0",
+    "sass": "^1.53.0",
+    "sharp": "~0.30.7",
+    "stylelint": "^14.9.1",
     "stylelint-config-recommended-scss": "^6.0.0",
-    "stylelint-config-standard": "^25.0.0",
+    "stylelint-config-standard": "^26.0.0",
     "stylelint-scss": "^4.2.0",
-    "svelte": "^3.46.4",
-    "svelte-check": "^2.4.6",
-    "svelte-preprocess": "^4.10.4",
+    "svelte": "^3.48.0",
+    "svelte-check": "^2.7.2",
+    "svelte-preprocess": "^4.10.7",
     "svelte-preprocess-import-assets": "^0.1.6",
-    "vanilla-lazyload": "^17.6.1",
-    "vite-imagetools": "^4.0.3"
+    "vanilla-lazyload": "^17.8.2",
+    "vite-imagetools": "^4.0.4"
   },
   "repository": {
     "type": "git",
