--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "license": "BSD-3-Clause",
   "description": "SvelteKit Accessibility Testing: see how you can use Playwright to run automated axe accessibility & htmlcs tests in your Svelte CI workflow.",
   "scripts": {
-    "dev": "svelte-kit dev --port 3030",
-    "build": "npm run generate:manifest && svelte-kit build",
-    "preview": "svelte-kit preview --port 3030",
+    "dev": "vite dev",
+    "build": "npm run generate:manifest && vite build",
+    "preview": "vite preview",
     "check": "svelte-check --fail-on-hints",
     "check:watch": "svelte-check --watch",
     "lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
@@ -39,6 +39,7 @@
     "eslint-plugin-svelte3": "link:latest@commitlint/config-conventional@latest",
     "front-matter": "^4.0.2",
     "husky": "^8.0.1",
+    "leaflet": "^1.8.0",
     "mdsvex": "^0.10.6",
     "object-hash": "^3.0.0",
     "pa11y": "^6.2.3",
@@ -51,14 +52,15 @@
     "sass": "^1.53.0",
     "sharp": "~0.30.7",
     "stylelint": "^14.9.1",
-    "stylelint-config-recommended-scss": "^6.0.0",
-    "stylelint-config-standard": "^26.0.0",
+    "stylelint-config-recommended-scss": "^7.0.0",
+    "stylelint-config-standard": "^28.0.0",
     "stylelint-scss": "^4.2.0",
     "svelte": "^3.48.0",
     "svelte-check": "^2.7.2",
     "svelte-preprocess": "^4.10.7",
     "svelte-preprocess-import-assets": "^0.1.6",
     "vanilla-lazyload": "^17.8.2",
+    "vite": "^3.0.9",
     "vite-imagetools": "^4.0.4"
   },
   "repository": {
@@ -68,5 +70,9 @@
   "bugs": {
     "url": "https://github.com/rodneylab/sveltekit-accessibility-testing/issues"
   },
-  "type": "module"
+  "type": "module",
+  "peerDependencies": {
+    "leaflet": "^1.8.0",
+    "vite": "^3.0.9"
+  }
 }
