--- a/.env.EXAMPLE
+++ b/.env.EXAMPLE
@@ -11,6 +11,7 @@ VITE_WIRE_USERNAME="@rodneylab"
 
 VITE_DOMAIN="example.com"
 VITE_SITE_URL="https://www.example.com"
+SITE_TEST_URL="http://localhost:5173"
 
 # Sentry
 VITE_SENTRY_KEY="123456"
