--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"description": "SvelteKit Accessibility Testing: see how you can use Playwright to run automated axe accessibility & htmlcs tests in your Svelte CI workflow.",
 	"scripts": {
 		"dev": "vite dev",
-		"build": "npm run generate:manifest && vite build",
+		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-check --fail-on-hints",
 		"check:watch": "svelte-check --watch",
@@ -13,55 +13,52 @@
 		"lint:scss": "stylelint \"src/**/*.{css,scss,svelte}\"",
 		"format": "prettier --write --plugin-search-dir=. .",
 		"generate:images": "node ./generate-responsive-image-data.js",
-		"generate:manifest": "node ./generate-manifest.js",
-		"generate:sitemap": "node ./generate-sitemap.js",
 		"prettier:check": "prettier --check --plugin-search-dir=. .",
 		"prepare": "husky install",
 		"test:a11y": "pa11y-ci --sitemap 'http://localhost:3000/sitemap.xml' --sitemap-find 'https://example.com' --sitemap-replace 'http://localhost:3000'",
 		"test": "playwright test"
 	},
 	"devDependencies": {
-		"@commitlint/config-conventional": "^17.0.3",
-		"@fontsource/lato": "^4.5.8",
-		"@fontsource/lora": "^4.5.10",
-		"@fontsource/source-sans-pro": "^4.5.10",
+		"@commitlint/config-conventional": "^17.1.0",
+		"@fontsource/lato": "^4.5.10",
+		"@fontsource/lora": "^4.5.12",
+		"@fontsource/source-sans-pro": "^4.5.11",
 		"@iconify/svelte": "^2.2.1",
-		"@playwright/test": "^1.22.2",
-		"@rodneylab/sveltekit-components": "^0.2.13",
-		"@sveltejs/adapter-static": "^1.0.0-next.34",
-		"@sveltejs/kit": "^1.0.0-next.354",
+		"@playwright/test": "^1.27.1",
+		"@rodneylab/sveltekit-components": "^1.0.2",
+		"@sveltejs/adapter-static": "^1.0.0-next.44",
+		"@sveltejs/kit": "^1.0.0-next.516",
 		"@types/object-hash": "^2.2.1",
-		"commitlint": "^17.0.3",
-		"dayjs": "^1.11.3",
-		"dotenv": "^16.0.1",
-		"eslint": "^8.18.0",
+		"commitlint": "^17.1.2",
+		"dayjs": "^1.11.5",
+		"dotenv": "^16.0.3",
+		"eslint": "^8.25.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "link:latest@commitlint/config-conventional@latest",
 		"front-matter": "^4.0.2",
 		"husky": "^8.0.1",
-		"leaflet": "^1.8.0",
+		"leaflet": "^1.9.2",
 		"mdsvex": "^0.10.6",
 		"object-hash": "^3.0.0",
 		"pa11y": "^6.2.3",
 		"pa11y-ci": "^3.0.1",
-		"postcss": "^8.4.14",
-		"postcss-html": "^1.4.1",
+		"postcss": "^8.4.18",
+		"postcss-html": "^1.5.0",
 		"prettier": "~2.7.1",
-		"prettier-plugin-svelte": "^2.7.0",
+		"prettier-plugin-svelte": "^2.8.0",
 		"reading-time": "1.4.0",
-		"sass": "^1.53.0",
-		"sharp": "~0.30.7",
-		"stylelint": "^14.9.1",
+		"sass": "^1.55.0",
+		"sharp": "~0.31.1",
+		"stylelint": "^14.14.0",
 		"stylelint-config-recommended-scss": "^7.0.0",
-		"stylelint-config-standard": "^28.0.0",
-		"stylelint-scss": "^4.2.0",
-		"svelte": "^3.48.0",
-		"svelte-check": "^2.7.2",
+		"stylelint-config-standard": "^29.0.0",
+		"stylelint-scss": "^4.3.0",
+		"svelte": "^3.52.0",
+		"svelte-check": "^2.9.2",
 		"svelte-preprocess": "^4.10.7",
-		"svelte-preprocess-import-assets": "^0.1.6",
-		"vanilla-lazyload": "^17.8.2",
-		"vite": "^3.0.9",
-		"vite-imagetools": "^4.0.4"
+		"vanilla-lazyload": "^17.8.3",
+		"vite": "^3.1.8",
+		"vite-imagetools": "^4.0.11"
 	},
 	"repository": {
 		"type": "git",
