--- a/package.json
+++ b/package.json
@@ -15,50 +15,50 @@
 		"generate:images": "node ./generate-responsive-image-data.js",
 		"prettier:check": "prettier --check --plugin-search-dir=. .",
 		"prepare": "husky install",
-		"test:a11y": "pa11y-ci --sitemap 'http://localhost:3000/sitemap.xml' --sitemap-find 'https://example.com' --sitemap-replace 'http://localhost:3000'",
+		"test:a11y": "pa11y-ci --sitemap 'http://localhost:5173/sitemap.xml' --sitemap-find 'https://example.com' --sitemap-replace 'http://localhost:5173'",
 		"test": "playwright test"
 	},
 	"devDependencies": {
-		"@commitlint/config-conventional": "^17.1.0",
+		"@commitlint/config-conventional": "^17.4.2",
 		"@fontsource/lato": "^4.5.10",
-		"@fontsource/lora": "^4.5.12",
+		"@fontsource/lora": "^4.5.13",
 		"@fontsource/source-sans-pro": "^4.5.11",
-		"@iconify/svelte": "^2.2.1",
-		"@playwright/test": "^1.27.1",
-		"@rodneylab/sveltekit-components": "^1.0.2",
-		"@sveltejs/adapter-static": "^1.0.0-next.44",
-		"@sveltejs/kit": "^1.0.0-next.516",
-		"@types/object-hash": "^2.2.1",
-		"commitlint": "^17.1.2",
-		"dayjs": "^1.11.5",
+		"@iconify/svelte": "^3.1.0",
+		"@playwright/test": "^1.30.0",
+		"@rodneylab/sveltekit-components": "^2.0.0",
+		"@sveltejs/adapter-static": "^1.0.5",
+		"@sveltejs/kit": "^1.3.7",
+		"@types/object-hash": "^3.0.2",
+		"commitlint": "^17.4.2",
+		"dayjs": "^1.11.7",
 		"dotenv": "^16.0.3",
-		"eslint": "^8.25.0",
-		"eslint-config-prettier": "^8.5.0",
+		"eslint": "^8.33.0",
+		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-svelte3": "link:latest@commitlint/config-conventional@latest",
 		"front-matter": "^4.0.2",
-		"husky": "^8.0.1",
-		"leaflet": "^1.9.2",
+		"husky": "^8.0.3",
 		"mdsvex": "^0.10.6",
 		"object-hash": "^3.0.0",
 		"pa11y": "^6.2.3",
 		"pa11y-ci": "^3.0.1",
-		"postcss": "^8.4.18",
+		"postcss": "^8.4.21",
 		"postcss-html": "^1.5.0",
-		"prettier": "~2.7.1",
-		"prettier-plugin-svelte": "^2.8.0",
+		"prettier": "~2.8.3",
+		"prettier-plugin-svelte": "^2.9.0",
+		"puppeteer": "9",
 		"reading-time": "1.4.0",
-		"sass": "^1.55.0",
-		"sharp": "~0.31.1",
-		"stylelint": "^14.14.0",
-		"stylelint-config-recommended-scss": "^7.0.0",
+		"sass": "^1.58.0",
+		"sharp": "~0.31.3",
+		"stylelint": "^14.16.1",
+		"stylelint-config-recommended-scss": "^8.0.0",
 		"stylelint-config-standard": "^29.0.0",
 		"stylelint-scss": "^4.3.0",
-		"svelte": "^3.52.0",
-		"svelte-check": "^2.9.2",
-		"svelte-preprocess": "^4.10.7",
+		"svelte": "^3.55.1",
+		"svelte-check": "^3.0.3",
+		"svelte-preprocess": "^5.0.1",
 		"vanilla-lazyload": "^17.8.3",
-		"vite": "^3.1.8",
-		"vite-imagetools": "^4.0.11"
+		"vite": "^4.0.4",
+		"vite-imagetools": "^4.0.18"
 	},
 	"repository": {
 		"type": "git",
@@ -69,7 +69,6 @@
 	},
 	"type": "module",
 	"peerDependencies": {
-		"leaflet": "^1.8.0",
-		"vite": "^3.0.9"
+		"puppeteer": "9"
 	}
 }
