--- a/package.json
+++ b/package.json
@@ -19,21 +19,21 @@
 		"test": "playwright test"
 	},
 	"devDependencies": {
-		"@commitlint/config-conventional": "^17.4.2",
-		"@fontsource/lato": "^4.5.10",
-		"@fontsource/lora": "^4.5.13",
-		"@fontsource/source-sans-pro": "^4.5.11",
-		"@iconify/svelte": "^3.1.0",
-		"@playwright/test": "^1.30.0",
-		"@rodneylab/sveltekit-components": "^2.0.0",
-		"@sveltejs/adapter-static": "^1.0.5",
-		"@sveltejs/kit": "^1.3.7",
+		"@commitlint/config-conventional": "^17.6.5",
+		"@fontsource/lato": "^5.0.2",
+		"@fontsource/lora": "^5.0.2",
+		"@fontsource/source-sans-pro": "^5.0.2",
+		"@iconify/svelte": "^3.1.3",
+		"@playwright/test": "^1.34.3",
+		"@rodneylab/sveltekit-components": "^2.0.2",
+		"@sveltejs/adapter-static": "^2.0.2",
+		"@sveltejs/kit": "^1.20.0",
 		"@types/object-hash": "^3.0.2",
-		"commitlint": "^17.4.2",
+		"commitlint": "^17.6.5",
 		"dayjs": "^1.11.7",
-		"dotenv": "^16.0.3",
-		"eslint": "^8.33.0",
-		"eslint-config-prettier": "^8.6.0",
+		"dotenv": "^16.1.3",
+		"eslint": "^8.41.0",
+		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "link:latest@commitlint/config-conventional@latest",
 		"front-matter": "^4.0.2",
 		"husky": "^8.0.3",
@@ -41,24 +41,24 @@
 		"object-hash": "^3.0.0",
 		"pa11y": "^6.2.3",
 		"pa11y-ci": "^3.0.1",
-		"postcss": "^8.4.21",
+		"postcss": "^8.4.24",
 		"postcss-html": "^1.5.0",
-		"prettier": "~2.8.3",
-		"prettier-plugin-svelte": "^2.9.0",
-		"puppeteer": "9",
+		"prettier": "~2.8.8",
+		"prettier-plugin-svelte": "^2.10.1",
+		"puppeteer": "^9.1.1",
 		"reading-time": "1.4.0",
-		"sass": "^1.58.0",
-		"sharp": "~0.31.3",
-		"stylelint": "^14.16.1",
-		"stylelint-config-recommended-scss": "^8.0.0",
-		"stylelint-config-standard": "^29.0.0",
-		"stylelint-scss": "^4.3.0",
-		"svelte": "^3.55.1",
-		"svelte-check": "^3.0.3",
-		"svelte-preprocess": "^5.0.1",
+		"sass": "^1.62.1",
+		"sharp": "~0.32.1",
+		"stylelint": "^15.6.2",
+		"stylelint-config-recommended-scss": "^12.0.0",
+		"stylelint-config-standard": "^33.0.0",
+		"stylelint-scss": "^5.0.0",
+		"svelte": "^3.59.1",
+		"svelte-check": "^3.4.3",
+		"svelte-preprocess": "^5.0.4",
 		"vanilla-lazyload": "^17.8.3",
-		"vite": "^4.0.4",
-		"vite-imagetools": "^4.0.18"
+		"vite": "^4.3.9",
+		"vite-imagetools": "^5.0.4"
 	},
 	"repository": {
 		"type": "git",
