--- a/package.json
+++ b/package.json
@@ -5,60 +5,61 @@
 	"description": "SvelteKit Accessibility Testing: see how you can use Playwright to run automated axe accessibility & htmlcs tests in your Svelte CI workflow.",
 	"scripts": {
 		"dev": "vite dev",
+		"start": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-check",
 		"check:watch": "svelte-check --watch",
-		"lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+		"lint": "prettier --check --plugin=prettier-plugin-svelte . && eslint --ignore-path .gitignore .",
 		"lint:scss": "stylelint \"src/**/*.{css,scss,svelte}\"",
-		"format": "prettier --write --plugin-search-dir=. .",
+		"format": "prettier --write --plugin=prettier-plugin-svelte .",
 		"generate:images": "node ./generate-responsive-image-data.js",
-		"prettier:check": "prettier --check --plugin-search-dir=. .",
+		"prettier:check": "prettier --check --plugin=prettier-plugin-svelte .",
 		"prepare": "husky install",
 		"test:a11y": "pa11y-ci --sitemap 'http://localhost:5173/sitemap.xml' --sitemap-find 'https://example.com' --sitemap-replace 'http://localhost:5173'",
 		"test": "playwright test"
 	},
 	"devDependencies": {
-		"@commitlint/config-conventional": "^17.6.5",
-		"@fontsource/lato": "^5.0.2",
-		"@fontsource/lora": "^5.0.2",
-		"@fontsource/source-sans-pro": "^5.0.2",
-		"@iconify/svelte": "^3.1.3",
-		"@playwright/test": "^1.34.3",
-		"@rodneylab/sveltekit-components": "^2.0.2",
-		"@sveltejs/adapter-static": "^2.0.2",
-		"@sveltejs/kit": "^1.20.0",
-		"@types/object-hash": "^3.0.2",
-		"commitlint": "^17.6.5",
-		"dayjs": "^1.11.7",
-		"dotenv": "^16.1.3",
-		"eslint": "^8.41.0",
-		"eslint-config-prettier": "^8.8.0",
+		"@commitlint/config-conventional": "^18.1.0",
+		"@fontsource/lato": "^5.0.17",
+		"@fontsource/lora": "^5.0.8",
+		"@fontsource/source-sans-pro": "^5.0.8",
+		"@iconify/svelte": "^3.1.4",
+		"@playwright/test": "^1.39.0",
+		"@rodneylab/sveltekit-components": "^3.0.0",
+		"@sveltejs/adapter-static": "^2.0.3",
+		"@sveltejs/kit": "^1.27.4",
+		"@types/object-hash": "^3.0.6",
+		"commitlint": "^18.2.0",
+		"dayjs": "^1.11.10",
+		"dotenv": "^16.3.1",
+		"eslint": "^8.53.0",
+		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-svelte3": "link:latest@commitlint/config-conventional@latest",
 		"front-matter": "^4.0.2",
 		"husky": "^8.0.3",
-		"mdsvex": "^0.10.6",
+		"mdsvex": "^0.11.0",
 		"object-hash": "^3.0.0",
 		"pa11y": "^6.2.3",
 		"pa11y-ci": "^3.0.1",
-		"postcss": "^8.4.24",
+		"postcss": "^8.4.31",
 		"postcss-html": "^1.5.0",
-		"prettier": "~2.8.8",
-		"prettier-plugin-svelte": "^2.10.1",
+		"prettier": "~3.0.3",
+		"prettier-plugin-svelte": "^3.0.3",
 		"puppeteer": "^9.1.1",
 		"reading-time": "1.4.0",
-		"sass": "^1.62.1",
-		"sharp": "~0.32.1",
-		"stylelint": "^15.6.2",
-		"stylelint-config-recommended-scss": "^12.0.0",
-		"stylelint-config-standard": "^33.0.0",
-		"stylelint-scss": "^5.0.0",
-		"svelte": "^3.59.1",
-		"svelte-check": "^3.4.3",
+		"sass": "^1.69.5",
+		"sharp": "~0.32.6",
+		"stylelint": "^15.11.0",
+		"stylelint-config-recommended-scss": "^13.1.0",
+		"stylelint-config-standard": "^34.0.0",
+		"stylelint-scss": "^5.3.1",
+		"svelte": "^4.2.2",
+		"svelte-check": "^3.5.2",
 		"svelte-preprocess": "^5.0.4",
-		"vanilla-lazyload": "^17.8.3",
-		"vite": "^4.3.9",
-		"vite-imagetools": "^5.0.4"
+		"vanilla-lazyload": "^17.8.5",
+		"vite": "^4.5.0",
+		"vite-imagetools": "^6.2.3"
 	},
 	"repository": {
 		"type": "git",
